fix styling with flex wrap

--- a/src/App/components/Folder/Folder.module.scss
+++ b/src/App/components/Folder/Folder.module.scss
@@ -5,6 +5,8 @@
   color: $super-light-cream;
   width: 100px;
   height: 75px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   &:hover,
   &:hover:enabled {
     cursor: pointer;
